unpackaged/main/default/objects/ETT_Pattern_Master__c/ETT_Pattern_Master__c.object-meta.xml
<CustomObject>
    <label>Pattern Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Pattern Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pattern Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>