unpackaged/main/default/objects/ETT_Pattern_Master__c/fields/ETT_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>