unpackaged/main/default/objects/ETT_Pattern_Master__c/fields/ETT_Pattern_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Pattern code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>